# rover

./: .gitignore  CMakeLists.txt  build.bat  build.sh  install_python.bat  install_python.sh  setup.bat  setup.sh
Config/: dependencies.cmake  dependencies.posix.cmake  dependencies.windows.cmake
Config/Python/: CMakeLists.txt
Config/Tests/: CMakeLists.txt
Include/Rover/: LinearRegressionModel.hpp  LogisticRegressionModel.hpp  Optimizers.hpp  Perceptron.hpp  PolynomialRegressionModel.hpp  Rover.hpp  SupportVectorMachine.hpp
Include/Rover/Python/: LinearRegressionModel.hpp  LogisticRegressionModel.hpp  PolynomialRegressionModel.hpp  SupportVectorMachine.hpp
Source/Python/: Rover.cpp
Source/Tests/: LinearRegressionModelTester.cpp  LogisticRegressionModelTester.cpp  PolynomialRegressionModelTester.cpp  SupportVectorMachineTester.cpp
